--- a/styles/default.css
+++ b/styles/default.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 header{
@@ -38,6 +38,7 @@ button{
     padding: 10px 20px;
     border: none;
     cursor: pointer;
+    font-size: medium;
 }
 
 button:hover{
